@@ -180,6 +180,8 @@
     <string name="pref_picture_recognition_title">Reconnaissance d\'écran</string>
     <string name="pref_settings_prthreshold_title">Seuil de tolérance</string>
     <string name="pref_settings_prthreshold_summary">Plus le seuil est élevé, plus les différences entre l\'image de déclenchement et la capture d\'écran sont acceptées</string>
+    <string name="pref_settings_prfrequency_title">Temps de capture</string>
+    <string name="pref_settings_prfrequency_summary">Plus le temps est élevé, plus le système de reconnaissance d\'écran prendra du temps pour faire la capture</string>
 
     <string name="pref_credits_title">Crédits</string>
     <string name="pref_key_credit_title">Cette app utilise des outils tiers</string>
